[gd_scene load_steps=7 format=3 uid="uid://d3o0iajk1xkx3"]

[ext_resource type="Script" path="res://board/board_ui.gd" id="1_c6hki"]
[ext_resource type="PackedScene" uid="uid://cx06kc85x60e1" path="res://ui_basic_blocks/safe_to_file.tscn" id="2_l6x72"]
[ext_resource type="PackedScene" uid="uid://c2q0vj220ivpe" path="res://ui_basic_blocks/add_text.tscn" id="3_im44s"]
[ext_resource type="Script" path="res://board/right_ui.gd" id="4_grvn6"]
[ext_resource type="PackedScene" uid="uid://b83adri2kp1yg" path="res://basic_blocks/basic_text_block.tscn" id="4_obe43"]
[ext_resource type="PackedScene" uid="uid://ix0ma50scads" path="res://ui_basic_blocks/clear_board.tscn" id="6_nafj4"]

[node name="board_ui" type="Control" groups=["board_ui"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6hki")

[node name="left_ui" type="VBoxContainer" parent="." groups=["left_ui"]]
layout_mode = 0
offset_right = 512.0
offset_bottom = 1080.0
mouse_filter = 0

[node name="exit_to_menu" type="Button" parent="left_ui"]
layout_mode = 2
size_flags_horizontal = 0
text = "X"

[node name="safe_to_file" parent="left_ui" instance=ExtResource("2_l6x72")]
layout_mode = 2

[node name="right_ui_scroll" type="ScrollContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.833333
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="right_ui" type="VBoxContainer" parent="right_ui_scroll" groups=["right_ui"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_grvn6")

[node name="Testsave" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="basic_text_block" parent="Testsave" instance=ExtResource("4_obe43")]
layout_mode = 0

[node name="basic_text_block2" parent="Testsave" instance=ExtResource("4_obe43")]
layout_mode = 0
offset_left = 100.0
offset_top = 800.0
offset_right = 268.0
offset_bottom = 850.0

[node name="basic_text_block3" parent="Testsave" instance=ExtResource("4_obe43")]
layout_mode = 0
offset_left = 600.0
offset_top = 300.0
offset_right = 768.0
offset_bottom = 350.0

[node name="basic_text_block4" parent="Testsave" instance=ExtResource("4_obe43")]
layout_mode = 0
offset_left = 500.0
offset_top = 700.0
offset_right = 668.0
offset_bottom = 750.0

[node name="add_text" parent="Testsave" instance=ExtResource("3_im44s")]
layout_mode = 0

[node name="clear_board" parent="Testsave" instance=ExtResource("6_nafj4")]
layout_mode = 0

[connection signal="pressed" from="left_ui/exit_to_menu" to="." method="_on_exit_to_menu_pressed"]
